compiler-core/parsing/tests/snapshots/parser__binder_digit.snap
---
source: compiler-core/parsing/tests/parser.rs
expression: "(node, errors)"
snapshot_kind: text
---
(
    Module@0..55
      ModuleHeader@0..24
        MODULE@0..6 "module"
        ModuleName@6..18
          Annotation@6..7
            TEXT@6..7 " "
          UPPER@7..18 "BinderDigit"
        Annotation@18..19
          TEXT@18..19 " "
        WHERE@19..24 "where"
      LAYOUT_START@24..24 ""
      ModuleImports@24..24
      ModuleStatements@24..54
        ValueEquation@24..39
          Annotation@24..26
            TEXT@24..26 "\n\n"
          LOWER@26..33 "integer"
          FunctionBinders@33..35
            BinderInteger@33..35
              Annotation@33..34
                TEXT@33..34 " "
              INTEGER@34..35 "1"
          Unconditional@35..39
            Annotation@35..36
              TEXT@35..36 " "
            EQUAL@36..37 "="
            WhereExpression@37..39
              ExpressionInteger@37..39
                Annotation@37..38
                  TEXT@37..38 " "
                INTEGER@38..39 "0"
        LAYOUT_SEPARATOR@39..39 ""
        ValueEquation@39..54
          Annotation@39..40
            TEXT@39..40 "\n"
          LOWER@40..46 "number"
          FunctionBinders@46..50
            BinderNumber@46..50
              Annotation@46..47
                TEXT@46..47 " "
              NUMBER@47..50 "1.0"
          Unconditional@50..54
            Annotation@50..51
              TEXT@50..51 " "
            EQUAL@51..52 "="
            WhereExpression@52..54
              ExpressionInteger@52..54
                Annotation@52..53
                  TEXT@52..53 " "
                INTEGER@53..54 "0"
      LAYOUT_END@54..54 ""
      Annotation@54..55
        TEXT@54..55 "\n"
      END_OF_FILE@55..55 ""
    ,
    [],
)
