compiler-core/parsing/tests/snapshots/parser__binder_negate.snap
---
source: compiler-core/parsing/tests/parser.rs
expression: "(node, errors)"
---
(
    Module@0..59
      ModuleHeader@0..25
        MODULE@0..6 "module"
        ModuleName@6..19
          Annotation@6..7
            TEXT@6..7 " "
          UPPER@7..19 "BinderNegate"
        Annotation@19..20
          TEXT@19..20 " "
        WHERE@20..25 "where"
      LAYOUT_START@25..25 ""
      ModuleStatements@25..58
        ValueEquation@25..41
          Annotation@25..27
            TEXT@25..27 "\n\n"
          LOWER@27..32 "minus"
          FunctionBinders@32..37
            BinderParenthesized@32..37
              Annotation@32..33
                TEXT@32..33 " "
              LEFT_PARENTHESIS@33..34 "("
              BinderInteger@34..36
                MINUS@34..35 "-"
                INTEGER@35..36 "1"
              RIGHT_PARENTHESIS@36..37 ")"
          Unconditional@37..41
            Annotation@37..38
              TEXT@37..38 " "
            EQUAL@38..39 "="
            WhereExpression@39..41
              ExpressionInteger@39..41
                Annotation@39..40
                  TEXT@39..40 " "
                INTEGER@40..41 "0"
        LAYOUT_SEPARATOR@41..41 ""
        ValueEquation@41..58
          Annotation@41..42
            TEXT@41..42 "\n"
          LOWER@42..47 "minus"
          FunctionBinders@47..54
            BinderParenthesized@47..54
              Annotation@47..48
                TEXT@47..48 " "
              LEFT_PARENTHESIS@48..49 "("
              BinderNumber@49..53
                MINUS@49..50 "-"
                NUMBER@50..53 "1.0"
              RIGHT_PARENTHESIS@53..54 ")"
          Unconditional@54..58
            Annotation@54..55
              TEXT@54..55 " "
            EQUAL@55..56 "="
            WhereExpression@56..58
              ExpressionInteger@56..58
                Annotation@56..57
                  TEXT@56..57 " "
                INTEGER@57..58 "0"
      LAYOUT_END@58..58 ""
      Annotation@58..59
        TEXT@58..59 "\n"
      END_OF_FILE@59..59 ""
    ,
    [],
)
