compiler-core/parsing/tests/snapshots/parser__binder_wildcard.snap
---
source: compiler-core/parsing/tests/parser.rs
expression: "(node, errors)"
---
(
    Module@0..44
      ModuleHeader@0..27
        MODULE@0..6 "module"
        Annotation@6..7
          TEXT@6..7 " "
        ModuleName@7..21
          UPPER@7..21 "BinderWildcard"
        Annotation@21..22
          TEXT@21..22 " "
        WHERE@22..27 "where"
      LAYOUT_START@27..27 ""
      ModuleStatements@27..43
        ValueEquation@27..43
          Annotation@27..29
            TEXT@27..29 "\n\n"
          LOWER@29..37 "wildcard"
          FunctionBinders@37..39
            BinderWildcard@37..39
              Annotation@37..38
                TEXT@37..38 " "
              UNDERSCORE@38..39 "_"
          Unconditional@39..43
            Annotation@39..40
              TEXT@39..40 " "
            EQUAL@40..41 "="
            WhereExpression@41..43
              ExpressionInteger@41..43
                Annotation@41..42
                  TEXT@41..42 " "
                INTEGER@42..43 "0"
      LAYOUT_END@43..43 ""
      Annotation@43..44
        TEXT@43..44 "\n"
      END_OF_FILE@44..44 ""
    ,
    [],
)
